--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ __pycache__/
 .idea
 # C extensions
 *.so
-data
-keys
 
 # Distribution / packaging
 .Python
@@ -162,6 +160,7 @@ docker-compose.override.yml
 
 # vscode
 .vscode/
+.ssh_tunnel
 
 # front-end
 node_modules
@@ -172,3 +171,8 @@ scratch*
 /mage_data*
 *secrets*.json
 your-first-project
+keys
+
+# Loaded CSV files
+data
+
